@@ -143,7 +143,7 @@ void MachoAnalyser::beginAnalysis()
 				file->seek(s->symoff+entropy[j]*sizeof (MACHO_SYMTAB_NLIST));
 				MACHO_SYMTAB_NLIST nlist;
 				if (file->read(&nlist, sizeof nlist) != sizeof nlist) break;
-				create_host_struct(&nlist, MACHO_SYMTAB_NLIST_struct, big_endian);
+				create_host_struct(&nlist, MACHO_SYMTAB_NLIST_struct, macho_shared->image_endianess);
 				if (nlist.strx && (nlist.type & MACHO_SYMBOL_N_TYPE == MACHO_SYMBOL_TYPE_N_SECT)) {
 					char macho_buffer[1024];
 					file->seek(s->stroff+nlist.strx);
